--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,9 @@
 
 body {
-  font: 14px "Century Gothic", Futura, sans-serif;
+  font: 25px "Century Gothic", Futura, sans-serif;
   margin: 20px;
+  display: flex;
+  justify-content: center;
 }
 
 ol, ul {
@@ -15,22 +17,24 @@ ol, ul {
 }
 
 .status {
-  margin-bottom: 10px;
+  margin-bottom: 20px; 
+  display: flex;
+  justify-content: center;
 }
 
 .square {
   background: #fff;
   border: 1px solid #999;
   float: left;
-  font-size: 24px;
+  font-size: 50px;
   font-weight: bold;
   line-height: 34px;
-  height: 34px;
+  height: 100px;
   margin-right: -1px;
   margin-top: -1px;
   padding: 0;
   text-align: center;
-  width: 34px;
+  width: 100px;
 }
 
 .square:focus {
@@ -38,7 +42,7 @@ ol, ul {
 }
 
 .square:hover {
-	background-color: green;
+	background-color: lightblue;
 }
 
 .kbd-navigation .square:focus {
