--- a/src/index.css
+++ b/src/index.css
@@ -57,3 +57,15 @@ ol, ul {
 .game-info {
   margin-left: 20px;
 }
+
+.move-button {
+	display: flex;
+	justify-content: center;
+	background-color: lightblue;
+	width: 40px;
+	height: 40px;
+	align-content: center;
+	font-family: "Century Gothic";
+	font-weight: bold;
+	font-size: 15px;
+}
