working with node,changes needed

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
+ul, li {
+  list-style: none;
+}
 
+.winner-list li {
+  margin : 2px;
+  padding: 0px;
+}
 body {
   font: 25px "Century Gothic", Futura, sans-serif;
   margin: 20px;
